Bug 163159 - Crashes when forwarding top message in a closed thread
Summary: Crashes when forwarding top message in a closed thread
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: SVN trunk (KDE 4)
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-06-03 21:14 UTC by mps
Modified: 2008-06-09 23:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mps 2008-06-03 21:14:31 UTC
Version:            (using Devel)
Installed from:    Compiled sources
OS:                Linux

I have kmail displaying messages in threaded mode. If I click on the top message of a closed thread and then forward (inline: Shift-F) it pops up a dialoge saying do I want to send it in digest form. If I click send in digest form, all is well. If I just click 'Send', kmail crashes.

Below are part of the konsole output and a backtrace. Thanks for your help.

kmail(8746) KMReaderWin::parseMsg: Finished parsing and displaying of message.
kmail(8746)/kmail (storage internals) KMFolderMaildir::getDwString: KDE_fopen(abs_file= "/home/kde-devel/.kde4/share/apps/kmail/mail/inbox/cur/1212503501.3313.iFmyK" , "r+") == stream ==  0x9e6b2d8
kmail(8746)/kmail (storage internals) KMFolderMaildir::getDwString: fclose(mIndexStream =  0x9e6b2d8 )
kmail(8746)/kmail (storage internals) KMFolderMaildir::getDwString: KDE_fopen(abs_file= "/home/kde-devel/.kde4/share/apps/kmail/mail/inbox/cur/1212504105.3313.lCU3F" , "r+") == stream ==  0x9e7c580
kmail(8746)/kmail (storage internals) KMFolderMaildir::getDwString: fclose(mIndexStream =  0x9e7c580 )
kmail(8746)/kmail (storage internals) KMFolderMaildir::getDwString: KDE_fopen(abs_file= "/home/kde-devel/.kde4/share/apps/kmail/mail/inbox/cur/1212511974.3313.Gz38v" , "r+") == stream ==  0x9f2fa68
kmail(8746)/kmail (storage internals) KMFolderMaildir::getDwString: fclose(mIndexStream =  0x9f2fa68 )
kmail(8746)/kmail (storage internals) KMFolderMaildir::getDwString: KDE_fopen(abs_file= "/home/kde-devel/.kde4/share/apps/kmail/mail/inbox/cur/1212511974.3313.5wbrT" , "r+") == stream ==  0x9ea4ce0
kmail(8746)/kmail (storage internals) KMFolderMaildir::getDwString: fclose(mIndexStream =  0x9ea4ce0 )
kmail(8746)/kdeui (KNotification) KNotification::slotReceivedId: 0
kmail(8746)/kdeui (KNotification) KNotification::close: 0
kmail(8746)/kdeui (KNotification) KNotification::~KNotification: -2
kmail(8746) KMMessage::setCharset: Trying to set a charset for a non-textual mimetype.
Fix this caller:
====================================================================
"[
0: /home/kde-devel/kde/kde4/lib/libkdecore.so.5(_Z14kRealBacktracei+0x36) [0x5414cc]
1: /home/kde-devel/kde/kde4/lib/libkmailprivate.so.4 [0xb55ead]
2: /home/kde-devel/kde/kde4/lib/libkmailprivate.so.4 [0xb35a42]
3: /home/kde-devel/kde/kde4/lib/libkmailprivate.so.4(_ZN16KMForwardCommand7executeEv+0x1812) [0xe10818]
4: /home/kde-devel/kde/kde4/lib/libkmailprivate.so.4(_ZN9KMCommand16slotPostTransferENS_6ResultE+0x51) [0xe15145]
]
"
====================================================================
*** KMail got signal 11 (Crashing)
KCrash: crashing... crashRecursionCounter = 2
KCrash: Application Name = kmail path = <unknown> pid = 8746
sock_file=/home/kde-devel/.kde4/socket-moabi/kdeinit4_localhost_10
kdeinit4: Got EXEC_NEW '/home/kde-devel/kde/kde4/lib/kde4/libexec/drkonqi' from socket.
kdeinit4: preparing to launch /home/kde-devel/kde/kde4/lib/kde4/libexec/drkonqi
kio_pop3(9346) POP3Protocol::~POP3Protocol:
kio_pop3(9347) POP3Protocol::~POP3Protocol:
kio_pop3(9348) POP3Protocol::~POP3Protocol:
kdeinit4: PID 9346 terminated.
kdeinit4: PID 9348 terminated.
kdeinit4: PID 9347 terminated.
kmail(8746) KMReaderWin::parseMsg: Finished parsing and displaying of message.
kmail(8746)/kmail (storage internals) KMFolderMaildir::getDwString: KDE_fopen(abs_file= "/home/kde-devel/.kde4/share/apps/kmail/mail/inbox/cur/1212503501.3313.iFmyK" , "r+") == stream ==  0x9e6b2d8
kmail(8746)/kmail (storage internals) KMFolderMaildir::getDwString: fclose(mIndexStream =  0x9e6b2d8 )
kmail(8746)/kmail (storage internals) KMFolderMaildir::getDwString: KDE_fopen(abs_file= "/home/kde-devel/.kde4/share/apps/kmail/mail/inbox/cur/1212504105.3313.lCU3F" , "r+") == stream ==  0x9e7c580
kmail(8746)/kmail (storage internals) KMFolderMaildir::getDwString: fclose(mIndexStream =  0x9e7c580 )
kmail(8746)/kmail (storage internals) KMFolderMaildir::getDwString: KDE_fopen(abs_file= "/home/kde-devel/.kde4/share/apps/kmail/mail/inbox/cur/1212511974.3313.Gz38v" , "r+") == stream ==  0x9f2fa68
kmail(8746)/kmail (storage internals) KMFolderMaildir::getDwString: fclose(mIndexStream =  0x9f2fa68 )
kmail(8746)/kmail (storage internals) KMFolderMaildir::getDwString: KDE_fopen(abs_file= "/home/kde-devel/.kde4/share/apps/kmail/mail/inbox/cur/1212511974.3313.5wbrT" , "r+") == stream ==  0x9ea4ce0
kmail(8746)/kmail (storage internals) KMFolderMaildir::getDwString: fclose(mIndexStream =  0x9ea4ce0 )
kmail(8746)/kdeui (KNotification) KNotification::slotReceivedId: 0
kmail(8746)/kdeui (KNotification) KNotification::close: 0
kmail(8746)/kdeui (KNotification) KNotification::~KNotification: -2
kmail(8746) KMMessage::setCharset: Trying to set a charset for a non-textual mimetype.
Fix this caller:
====================================================================
"[
0: /home/kde-devel/kde/kde4/lib/libkdecore.so.5(_Z14kRealBacktracei+0x36) [0x5414cc]
1: /home/kde-devel/kde/kde4/lib/libkmailprivate.so.4 [0xb55ead]
2: /home/kde-devel/kde/kde4/lib/libkmailprivate.so.4 [0xb35a42]
3: /home/kde-devel/kde/kde4/lib/libkmailprivate.so.4(_ZN16KMForwardCommand7executeEv+0x1812) [0xe10818]
4: /home/kde-devel/kde/kde4/lib/libkmailprivate.so.4(_ZN9KMCommand16slotPostTransferENS_6ResultE+0x51) [0xe15145]
]
"
====================================================================
*** KMail got signal 11 (Crashing)
KCrash: crashing... crashRecursionCounter = 2
KCrash: Application Name = kmail path = <unknown> pid = 8746
sock_file=/home/kde-devel/.kde4/socket-moabi/kdeinit4_localhost_10
kdeinit4: Got EXEC_NEW '/home/kde-devel/kde/kde4/lib/kde4/libexec/drkonqi' from socket.
kdeinit4: preparing to launch /home/kde-devel/kde/kde4/lib/kde4/libexec/drkonqi
kio_pop3(9346) POP3Protocol::~POP3Protocol:
kio_pop3(9347) POP3Protocol::~POP3Protocol:
kio_pop3(9348) POP3Protocol::~POP3Protocol:
kdeinit4: PID 9346 terminated.
kdeinit4: PID 9348 terminated.
kdeinit4: PID 9347 terminated.




Application: KMail (kmail), signal SIGSEGV
 [?1034hUsing host libthread_db library "/lib/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread -1208547632 (LWP 8746)]
[New Thread -1255556208 (LWP 8749)]
[KCrash handler]
#6  0x00b3dc18 in KMMessage::body (this=0xc56c)
    at /home/kde-devel/kde/src/kdepim/kmail/kmmessage.cpp:2553
#7  0x00e1089e in KMForwardCommand::execute (this=0x9e30a50)
    at /home/kde-devel/kde/src/kdepim/kmail/kmcommands.cpp:1323
#8  0x00e15145 in KMCommand::slotPostTransfer (this=0x9e30a50, 
    result=KMCommand::OK)
    at /home/kde-devel/kde/src/kdepim/kmail/kmcommands.cpp:272
#9  0x00e15669 in KMCommand::qt_metacall (this=0x9e30a50, 
    _c=QMetaObject::InvokeMetaMethod, _id=5, _a=0xbfcbd07c)
    at /home/kde-devel/kde/build/kdepim/kmail/kmcommands.moc:86
#10 0x00e160b4 in KMForwardCommand::qt_metacall (this=0x9e30a50, 
    _c=QMetaObject::InvokeMetaMethod, _id=9, _a=0xbfcbd07c)
    at /home/kde-devel/kde/build/kdepim/kmail/kmcommands.moc:1032
#11 0x0026ae61 in QMetaObject::activate (sender=0x9e30a50, 
    from_signal_index=4, to_signal_index=4, argv=0xbfcbd07c)
    at kernel/qobject.cpp:3007
#12 0x0026b2e3 in QMetaObject::activate (sender=0x9e30a50, m=0x110c374, 
    local_signal_index=0, argv=0xbfcbd07c) at kernel/qobject.cpp:3080
#13 0x00dfaa66 in KMCommand::messagesTransfered (this=0x9e30a50, 
    _t1=KMCommand::OK)
    at /home/kde-devel/kde/build/kdepim/kmail/kmcommands.moc:100
#14 0x00e15090 in KMCommand::transferSelectedMsgs (this=0x9e30a50)
    at /home/kde-devel/kde/src/kdepim/kmail/kmcommands.cpp:366
#15 0x00e15520 in KMCommand::slotStart (this=0x9e30a50)
    at /home/kde-devel/kde/src/kdepim/kmail/kmcommands.cpp:264
#16 0x00e1564e in KMCommand::qt_metacall (this=0x9e30a50, 
    _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0xbfcbd234)
    at /home/kde-devel/kde/build/kdepim/kmail/kmcommands.moc:85
#17 0x00e160b4 in KMForwardCommand::qt_metacall (this=0x9e30a50, 
    _c=QMetaObject::InvokeMetaMethod, _id=8, _a=0xbfcbd234)
    at /home/kde-devel/kde/build/kdepim/kmail/kmcommands.moc:1032
#18 0x0026ae61 in QMetaObject::activate (sender=0x9f29648, 
    from_signal_index=4, to_signal_index=4, argv=0x0)
    at kernel/qobject.cpp:3007
#19 0x0026b2e3 in QMetaObject::activate (sender=0x9f29648, m=0x304b68, 
    local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3080
#20 0x00275939 in QSingleShotTimer::timeout (this=0x9f29648)
    at .moc/debug-shared/qtimer.moc:74
#21 0x00275a76 in QSingleShotTimer::timerEvent (this=0x9f29648)
    at kernel/qtimer.cpp:300
#22 0x0026a0e2 in QObject::event (this=0x9f29648, e=0xbfcbd854)
    at kernel/qobject.cpp:1105
#23 0x04099d07 in QApplicationPrivate::notify_helper (this=0x95bc5b0, 
    receiver=0x9f29648, e=0xbfcbd854) at kernel/qapplication.cpp:3772
#24 0x0409a020 in QApplication::notify (this=0xbfcbdb6c, receiver=0x9f29648, 
    e=0xbfcbd854) at kernel/qapplication.cpp:3366
#25 0x052bc0a7 in KApplication::notify (this=0xbfcbdb6c, receiver=0x9f29648, 
    event=0xbfcbd854)
    at /home/kde-devel/kde/src/kdelibs/kdeui/kernel/kapplication.cpp:311
#26 0x00256bb2 in QCoreApplication::notifyInternal (this=0xbfcbdb6c, 
    receiver=0x9f29648, event=0xbfcbd854) at kernel/qcoreapplication.cpp:583
#27 0x0025a63b in QCoreApplication::sendEvent (receiver=0x9f29648, 
    event=0xbfcbd854)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#28 0x00289045 in QTimerInfoList::activateTimers (this=0x95bf82c)
    at kernel/qeventdispatcher_unix.cpp:563
#29 0x00286164 in timerSourceDispatch (source=0x95bf7f8)
    at kernel/qeventdispatcher_glib.cpp:166
#30 0x06caa1ac in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#31 0x06cad5ef in ?? () from /lib/libglib-2.0.so.0
#32 0x06cadb55 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#33 0x00285be4 in QEventDispatcherGlib::processEvents (this=0x95b3e20, 
    flags=@0xbfcbd9c8) at kernel/qeventdispatcher_glib.cpp:325
#34 0x04141da8 in QGuiEventDispatcherGlib::processEvents (this=0x95b3e20, 
    flags=@0xbfcbd9f8) at kernel/qguieventdispatcher_glib.cpp:204
#35 0x0025370e in QEventLoop::processEvents (this=0xbfcbda70, 
    flags=@0xbfcbda34) at kernel/qeventloop.cpp:149
#36 0x0025394d in QEventLoop::exec (this=0xbfcbda70, flags=@0xbfcbda78)
    at kernel/qeventloop.cpp:196
#37 0x0025739b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:845
#38 0x04099a04 in QApplication::exec () at kernel/qapplication.cpp:3304
#39 0x0804b000 in main (argc=1, argv=0xbfcbdc44)
    at /home/kde-devel/kde/src/kdepim/kmail/main.cpp:130
#0  0x00110402 in __kernel_vsyscall ()
Comment 1 Thomas McGuire 2008-06-04 20:50:42 UTC
I can't reproduce this, I was able to send myself a thread (which was closed) as a digest without problems.

This this happen with every thread or only with some of them?
Comment 2 mps 2008-06-08 17:24:53 UTC
Hi,

Sorry if I wasn't clear - sending as a digest works fine. It is only when I 
want to send just the top message that I get the crash. If I forward a closed 
thread there is a dialog with two buttons - 'Send Digest' and 'Send'. Send 
Digest works fine, Send produces a crash. If I open the thread (click on the +) 
and forward, then it forwrds fine.

HTH
M.
Comment 3 Thomas McGuire 2008-06-08 18:30:57 UTC
SVN commit 818469 by tmcguire:

Don't crash when inline-forwarding multiple mails.

BUG: 163159


 M  +2 -6      kmcommands.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=818469
Comment 4 mps 2008-06-09 23:42:06 UTC
I confirm fixed - thank you!