Don't crash when inline-forwarding multiple mails.

BUG: 163159

svn path=/trunk/KDE/kdepim/; revision=818469